reduce warnings + months visibility in the dashboard screen